--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="scripts/apiGateway-js-sdk/lib/apiGatewayCore/simpleHttpClient.js"></script>
     <script type="text/javascript" src="scripts/apiGateway-js-sdk/lib/apiGatewayCore/utils.js"></script>
     <script type="text/javascript" src="scripts/apiGateway-js-sdk/apigClient.js"></script>
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.283.1.min.js"></script>
     <script type="text/javascript" src="scripts/chatbot-script.js"></script>
   </head>
   <body>
